--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,22 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
+.logo img {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-.App-header {
+.Header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center
 }
 
 .App-link {
@@ -30,4 +27,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Menu{
+  list-style: none;
+
+}
+
+.Menu li{
+  display: inline-block;
+  padding-right: 10px;
 }
